# Weltklassebot-2.0

Weltklassebot2.0/: README.md
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/: Makefile  README.md  cosmic-ray.toml  pyproject.toml  pytest.ini
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/.github/ISSUE_TEMPLATE/: weltklasse_checklist.md
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/.github/workflows/: ci.yml
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/docker/: Dockerfile
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/docs/: CHANGELOG.md  runbook-ci.md  runbook-perf.md  runbook-risk.md  runbook.md
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/ops/alerts/: rules.yml  weltklasse-rules.yaml
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/ops/mutation/: cosmic-ray.toml
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/scripts/: bench_backtester.py  coverage_gate.py  exporter.py  run_backtest.py  run_backtest_cli.py  run_tests_cov.py  run_walkforward.py  walk_forward_smoke.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/backtest/: __init__.py  primitives.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/cli/: __init__.py  __main__.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/connectors/: __init__.py  base.py  paper.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/core/: __init__.py  _prometheus_stub.py  clock.py  config.py  engine.py  engine_checkpoint.py  events.py  metrics.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/data/: __init__.py  loader_parquet.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/execution/: fees.py  normalizer.py  oms_simulator.py  orderbook.py  simulator.py  slippage.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/portfolio/: _prometheus_stub.py  accounting.py  risk.py  risk_admin.py  risk_state_store.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/registry/: __init__.py  venues.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/research/: __init__.py  diagnostics.py  splits.py  tuning.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/state/: __init__.py  jsonl_store.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/strategy/: __init__.py  breakout_bias.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/tca/: __init__.py  metrics.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/src/typer/: __init__.py  testing.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/tests/: _hypothesis_stub.py  conftest.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/tests/_utils/: hash.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/tests/cli/: test_backtest_smoke.py  test_help.py
Weltklassebot2.0/Weltklasssebot2.0/Reichmacher-BOT-codex-explain-project-structure-step-by-step/tests/connectors/: test_paper_idempotency.py
(+58 files in other folders)
