[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reichmacher-bot"
version = "0.1.0"
description = "Quantitative trading infrastructure and tooling for the Reichmacher bot."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Reichmacher BOT Team"}
]
keywords = ["trading", "quant", "backtester", "crypto"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.8",
    "PyYAML>=6.0",
    "requests>=2.31",
    "websockets>=12.0",
    "redis>=5.0",
    "prometheus-client>=0.17",
    "flask>=3.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "hypothesis",
    "numpy; python_version>='3.8'",
]
bench = [
    "psutil",
]

[project.urls]
homepage = "https://github.com/chapo-alex/Reichmacher-BOT"
repository = "https://github.com/chapo-alex/Reichmacher-BOT"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.reichmacher]
coverage_threshold = 0.9
coverage_targets = [
    "src/core",
    "src/portfolio",
    "src/portfolio/risk.py",
    "src/strategy",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2
