[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weltklassebot"
version = "0.1.0"
description = "Deterministic research harness for breakout-biased crypto strategies."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Weltklassebot Team"}
]
keywords = ["trading", "quant", "backtester", "crypto"]
dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.0,<3.0",
    "prometheus-client>=0.20,<1.0",
    "pydantic>=2.5,<3.0",
    "typer>=0.12,<0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "pytest-benchmark>=4.0,<5.0",
    "ruff>=0.6,<0.7",
    "mypy>=1.10,<2.0",
    "types-python-dateutil",
]

[project.urls]
homepage = "https://github.com/chapo-alex/Reichmacher-BOT"
repository = "https://github.com/chapo-alex/Reichmacher-BOT"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_version = "3.11"
strict = true
no_implicit_optional = true
warn_redundant_casts = true
disallow_any_generics = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.reichmacher]
coverage_threshold = 0.9
coverage_targets = [
    "src/core",
    "src/portfolio",
    "src/portfolio/risk.py",
    "src/strategy",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2
